--- a/09_especies_vegetais/index.html
+++ b/09_especies_vegetais/index.html
@@ -258,7 +258,7 @@
                     <img src="imgs/5 ficus lyrata.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhas verde-escuras brilhantes, grandes, com veias proeminentes e bordas onduladas.</p>
                   </td>
-                  <td>Figueira-lira (<i>Ficus lyrata</i>)</td>
+                  <td>Figueira-lira (<i>Ficus lyrata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em solo com boa capacidade de retenção de umidade, enriquecido com matéria orgânica, arejado e drenável. Irrigação regular, sem encharcar. Evitar ambientes com ar condicionado constante, pois as folhas ficam com as bordas queimadas.</td>
                   <td>Exótica (África)</td>
                   <td>Luz difusa, meia-sombra, sol pleno</td>
@@ -359,6 +359,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco arbustos">
           <h4>Arbustos</h4>
@@ -425,6 +426,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco floriferas">
           <h4>Floríferas</h4>
@@ -443,7 +445,7 @@
                     <img src="imgs/19Anturio.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhas verdes, grandes e brilhantes. Brácteas (flores) vermelhas brilhantes em formato de coração. </p>
                   </td>
-                  <td>Antúrio (<i>Anthurium andraeanum</i>)</td>
+                  <td>Antúrio (<i>Anthurium andraeanum</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Exigente quanto à umidade, deve ser plantada em substratos ricos em matéria orgânica com regas frequentes e adubação. É uma planta rústica e de baixa manutenção.</td>
                   <td>Exótica (América do Sul)</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -453,7 +455,7 @@
                     <img src="imgs/20begonia.png" class="center-block img-responsive">
                     <p class="acessivel no-print">Visual exótico com folhas verdes e vermelhas, contendo pequenas bolinhas brancas, e flores brancas no caule. </p>
                   </td>
-                  <td>Begônia maculata (<i>Begonia maculata</i>)</td>
+                  <td>Begônia maculata (<i>Begonia maculata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar sob abundante luz filtrada. Prefere substratos ricos em matéria orgânica, permeáveis e drenáveis. Regar regularmente para manter o substrato úmido, sem encharcar.</td>
                   <td>Nativa</td>
                   <td>Luz filtrada, meia-sombra</td>
@@ -483,7 +485,7 @@
                     <img src="imgs/23 lirioda paz.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhagem verde e brilhante. Flor branca, semelhante a uma pétala, com um pequeno pendão internamente.</p>
                   </td>
-                  <td>Lírio-da-paz (<i>Spathiphyllum wallisii</i>)</td>
+                  <td>Lírio-da-paz (<i>Spathiphyllum wallisii</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivado em substrato rico em matéria orgânica, com boa drenagem. Adubações anuais e regas frequentes.</td>
                   <td>Exótica (América do Sul)</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -521,6 +523,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco frutiferas">
           <h4>Frutíferas</h4>
@@ -616,7 +619,7 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div> 
         </div>
         <div class="bloco herbaceas">
           <h4>Herbáceas</h4>
@@ -635,7 +638,7 @@
                     <img src="imgs/35 lança sao jorge.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Aspecto pontiagudo e folhagens fechadas em formato cilíndrico, eretas, rígidas e lisas, de cor verde-escura a acinzentadas, com raias verde-claras.</p>
                   </td>
-                  <td>Lança-de-são-jorge (<i>Sansevieria cylindrica</i>)</td>
+                  <td>Lança-de-são-jorge (<i>Sansevieria cylindrica</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Não resiste ao encharcamento, apodrecendo rapidamente nessa condição.</td>
                   <td>Exótica (África)</td>
                   <td>Luz difusa, meia-sombra, sol pleno</td>
@@ -645,7 +648,7 @@
                     <img src="imgs/36 filodendro.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">As folhas são ovadas e brilhantes de cor verde-escura e com o centro verde-limão.</p>
                   </td>
-                  <td>Filodendro-brasil (<i>Philodendron hederaceum</i>)</td>
+                  <td>Filodendro-brasil (<i>Philodendron hederaceum</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em solo fértil, enriquecido com matéria orgânica e irrigado frequentemente. Ao ser cultivada como trepadeira, é interessante oferecer-lhe um suporte fixo e poroso, para que possa subir e se fixar bem.</td>
                   <td>Exótica (América Central, América do Norte, América do Sul)</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -655,7 +658,7 @@
                     <img src="imgs/37 espada sao jorge.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhas eretas em forma de espada, tem listras horizontais de cor branca-esverdeada, acinzentadas em zigue-zague.</p>
                   </td>
-                  <td>Espada-de-são-jorge (<i>Sansevieria trifasciata</i>)</td>
+                  <td>Espada-de-são-jorge (<i>Sansevieria trifasciata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em vasos ou em maciços. Resiste tanto à estiagem quanto ao frio e ao calor, além de ser pouco exigente quanto à fertilidade.</td>
                   <td>Exótica (América Central, América do Norte, América do Sul)</td>
                   <td>Meia-sombra, sol pleno</td>
@@ -665,7 +668,7 @@
                     <img src="imgs/38 costela adao.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhas grandes e largas, recortadas e com alguns furos, na cor verde-escura.</p>
                   </td>
-                  <td>Costela-de-adão (<i>Monstera deliciosa</i>)</td>
+                  <td>Costela-de-adão (<i>Monstera deliciosa</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em substrato rico em matéria orgânica, com regas regulares, plantada isolada ou em pequenos grupos. Pode ser tutorada para escalar sobre outras plantas e paredes.</td>
                   <td>Exótica (América do Norte)</td>
                   <td>Meia-sombra</td>
@@ -675,7 +678,7 @@
                     <img src="imgs/39Samambaia-Americana.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Forma de touceira volumosa, com folhas longas e subdivididas em folículos rendados na coloração verde.</p>
                   </td>
-                  <td>Samambaia-americana (<i>Nephrolepis exaltata</i>)</td>
+                  <td>Samambaia-americana (<i>Nephrolepis exaltata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Planta rústica e que não tolera frio intenso. Os vasos devem ser irrigados com frequência, porém devem ser bem drenados. A alta umidade do ar as favorece.</td>
                   <td>Exótica (África, América Central, América do Norte, América do Sul, Ásia, Indonésia)</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -685,7 +688,7 @@
                     <img src="imgs/40 renda portuguesa.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhas verdes, grandes, cheias de detalhamentos e recortes que lembram rendas.</p>
                   </td>
-                  <td>Renda-portuguesa (<i>Davallia fejeensis</i>)</td>
+                  <td>Renda-portuguesa (<i>Davallia fejeensis</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em vasos e jardineiras com substrato rico em matéria orgânica, sempre à meia-sombra, com regas frequentes. Tem a possibilidade de ser plantada na vertical. Aprecia o calor e a alta umidade. Não tolera frio intenso.</td>
                   <td>Exótica (Austrália, Ilhas Fiji, Oceania)</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -725,7 +728,7 @@
                     <img src="imgs/44begonia .jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Folhagem densa e ornamental, com folhas grandes e assimétricas de cores verde, bronze, rosa ou cinza.</p>
                   </td>
-                  <td>Begônia rex (<i>Begonia rex</i>)</td>
+                  <td>Begônia rex (<i>Begonia rex</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Irrigar de forma que alcancem o solo, sem molhar as folhas. Requer boa ventilação, sem excessos. Teme o frio intenso ou as geadas.</td>
                   <td>Exótica (Ásia)</td>
                   <td>Luz difusa, meia-sombra, sombra</td>
@@ -733,6 +736,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco horticolas">
           <h4>Hortícolas</h4>
@@ -849,6 +853,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco forracao">
           <h4>Forração</h4>
@@ -867,7 +872,7 @@
                     <img src="imgs/55 hera.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Trepadeira com folhas verdes com manchas mais claras recortadas em formato de estrela. </p>
                   </td>
-                  <td>Hera (<i>Hedera helix</i>)</td>
+                  <td>Hera (<i>Hedera helix</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivada em solo fértil, bem drenável e enriquecido com matéria orgânica, irrigado periodicamente. Aprecia a umidade e o frio subtropical e não suporta solos encharcados. É tolerante a geadas.</td>
                   <td>Exótica (Europa África, Ásia, Ilhas Canárias)</td>
                   <td>Meia-sombra, sol pleno</td>
@@ -877,7 +882,7 @@
                     <img src="imgs/56 peperomia.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Planta pendente com folhas delicadas em verde-claro e galhos dilatados.</p>
                   </td>
-                  <td>Peperômia-filodendro (<i>Peperomia scandens</i>)</td>
+                  <td>Peperômia-filodendro (<i>Peperomia scandens</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Cultivar em solo fértil, leve e enriquecido com matéria orgânica, com regas regulares. Não é tolerante a geadas. Aprecia o litoral.</td>
                   <td>Nativa</td>
                   <td>Luz difusa, meia-sombra</td>
@@ -887,7 +892,7 @@
                     <img src="imgs/57 jiboia.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Trepadeira ornamental com folhas em formato de coração, nas cores verde ou verde rajada de amarelo e branco.</p>
                   </td>
-                  <td>Jiboia (<i>Epipremnum pinnatum</i>)</td>
+                  <td>Jiboia (<i>Epipremnum pinnatum</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>Para ter uma folhagem sempre bonita e de crescimento rápido, deve ser plantada em substrato rico em matéria orgânica e receber regas periódicas.</td>
                   <td>Exótica (Ilhas Salomão, Oceania)</td>
                   <td>Luz difusa, meia-sombra, sol pleno</td>
@@ -955,6 +960,7 @@
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco gramados">
           <h4>Gramados</h4>
@@ -1018,31 +1024,41 @@
                   <td>
                     <img src="imgs/55 hera.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Hera (<i>Hedera helix</i>)</td>
+                  <td>Hera (<i>Hedera helix</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>
                     <img src="imgs/37 espada sao jorge.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Espada-de-são-jorge (<i>Sansevieria trifasciata</i>)</td>
+                  <td>Espada-de-são-jorge (<i>Sansevieria trifasciata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                 </tr>
                 <tr>
                   <td>
                     <img src="imgs/56 peperomia.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Peperômia-filodendro (<i>Peperomia scandens</i>)</td>
+                  <td>Peperômia-filodendro (<i>Peperomia scandens</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>
                     <img src="imgs/38 costela adao.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Costela-de-adão (<i>Monstera deliciosa</i>)</td>
+                  <td>Costela-de-adão (<i>Monstera deliciosa</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                 </tr>
                 <tr>
                   <td>
                     <img src="imgs/57 jiboia.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Jiboia (<i>Epipremnum pinnatum</i>)</td>
+                  <td>Jiboia (<i>Epipremnum pinnatum</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                   <td>
                     <img src="imgs/39Samambaia-Americana.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Samambaia-americana (<i>Nephrolepis exaltata</i>)</td>
+                  <td>Samambaia-americana (<i>Nephrolepis exaltata</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="imgs/23 lirioda paz.jpg" class="center-block img-responsive">
+                  </td>
+                  <td>Lírio-da-paz (<i>Spathiphyllum wallisii</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
+                  <td>
+                    <img src="imgs/40 renda portuguesa.jpg" class="center-block img-responsive">
+                  </td>
+                  <td>Renda-portuguesa (<i>Davallia fejeensis</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                 </tr>
                 <tr>
                   <td>
@@ -1052,7 +1068,7 @@
                   <td>
                     <img src="imgs/19Anturio.jpg" class="center-block img-responsive">
                   </td>
-                  <td>Antúrio (<i>Anthurium andraeanum</i>)</td>
+                  <td>Antúrio (<i>Anthurium andraeanum</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                 </tr>
                 <tr>
                   <td>
@@ -1062,11 +1078,12 @@
                   <td>
                     <img src="imgs/44begonia .jpg" class="center-block img-responsive">
                   </td>
-                  <td>Begônia rex (<i>Begonia rex</i>)</td>
+                  <td>Begônia rex (<i>Begonia rex</i>) <img src="imgs/toxico.png" class="center-block" alt="Tóxica"></td>
                 </tr>
               </tbody>
             </table>
           </div>
+          <img src="imgs/especies_legenda.png" class="pull-right legenda print" aria-hidden="true">
         </div>
         <div class="bloco encerramento">
           <h3>Encerramento</h3>
