--- a/01_design_passivo/index.html
+++ b/01_design_passivo/index.html
@@ -176,6 +176,9 @@
             acústico e o que são a insolação e a ventilação, e como elas podem
             contribuir para um <i>design</i> mais sustentável.
           </p>
+          <h1>Espera para vídeo 1</h1>
+          <video></video>
+          <h1>Espera para vídeo 2</h1>
           <video></video>
 
 
