--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             />
           </div>
           <div class="col-xs-12 col-lg-10">
-            <h1>Projetar design de interiores sustentáveis</h1>
+            <h1>Projetar <i>design</i> de interiores sustentáveis</h1>
             <hr />
           </div>
           <div class="col-xs-12">
@@ -119,8 +119,8 @@
                   href="01_design_passivo/index.html"
                   target="_blank"
                   class="link"
-                  >2 - Design Passivo: insolação, conforto térmico e acústico,
-                  umidade e ventilação</a
+                  >2 - <i>Design</i> Passivo: insolação, conforto térmico e
+                  acústico, umidade e ventilação</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -152,7 +152,7 @@
                   href="07_design_biofilico/index.html"
                   target="_blank"
                   class="link"
-                  >3 – Design Biofílico: princípios e aplicações
+                  >3 – <i>Design</i> Biofílico: princípios e aplicações
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -320,9 +320,10 @@
                   href="11_projeto_jardinismo/index.html"
                   target="_blank"
                   class="link"
-                  >3– Projeto de jardinismo: Etapas, briefing, levantamento de
-                  dados, plano de massa, estudo preliminar, anteprojeto, projeto
-                  executivo de plantio e memorial descritivo
+                  >3– Projeto de jardinismo: Etapas, <i>briefing</i>,
+                  levantamento de dados, plano de massa, estudo preliminar,
+                  anteprojeto, projeto executivo de plantio e memorial
+                  descritivo
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -415,8 +416,8 @@
                   href="05_re-design_materiais/index.html"
                   target="_blank"
                   class="link"
-                  >2 - Re-design: materiais, técnicas (upcycle, retrofit e
-                  customização), projetos e selos de garantias
+                  >2 - <i>Re-design</i>: materiais, técnicas (<i>upcycle</i>,
+                  <i>retrofit</i> e customização), projetos e selos de garantias
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -506,7 +507,7 @@
                   href="08_urban_jungle/index.html"
                   target="_blank"
                   class="link"
-                  >2 – Urban Jungle: contexto e conceito
+                  >2 – <i>Urban Jungle</i>: contexto e conceito
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
