ajustes do conhecimento 3

--- a/03_industria/index.html
+++ b/03_industria/index.html
@@ -77,9 +77,10 @@
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
       <div class="pagina">
         <h2>Indústria: mudança de modelo mental e soluções tecnológicas</h2>
-        <p>O mundo passou por verdadeiras transformações em muitos sentidos no decorrer dos séculos. Nos âmbitos econômico, político e social, as revoluções no campo industrial foram marcantes, tendo seu início com a manufatura artesanal, chegando ao que se vive hoje, denominado como Quarta Revolução Industrial ou Indústria 4.0 (Quintino, et al., 2019). </p>
+        <p>O mundo passou por verdadeiras transformações em muitos sentidos no decorrer dos séculos. Nos âmbitos econômico, político e social, as revoluções no campo industrial foram marcantes, tendo seu início com a manufatura artesanal, chegando ao que se vive hoje, denominado como Quarta Revolução Industrial ou Indústria 4.0 (Quintino, <i>et al</i>., 2019). </p>
         <p>Neste momento você pode estar se perguntando: por que eu preciso conhecer as mudanças da indústria nesta unidade curricular? O que esse conhecimento pode agregar na minha formação? A resposta é simples: a indústria é o meio que gera tudo que você consome, usa ou especifica. Por essa razão, entender os processos fabris e como a tecnologia chegou ao que se tem hoje lhe possibilitará fazer escolhas mais conscientes dos produtos e serviços que utiliza em seus projetos. </p>
         <p>Então, conheça um pouquinho da história para compreender como a indústria cresceu ao longo dos anos.</p>
+        <h1>Espera para vídeo</h1>
         <video></video>
         <h3>Encerramento</h3>
         <p>Neste conhecimento, você aprendeu como os processos fabris e a tecnologia moldaram o ambiente em que se vive. A indústria desempenha um papel importante na criação de móveis, acabamentos e elementos que integram os espaços projetados. Conhecendo essa trajetória, você será capaz de tomar decisões mais informadas na seleção de materiais, de mobiliário e de tecnologias para seus projetos de design de interiores. </p>
