ajustes do conhecimento 4

--- a/04_modelos_consumo/index.html
+++ b/04_modelos_consumo/index.html
@@ -139,7 +139,7 @@
                         <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
                         <a href="imgs/figura_1.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_1.jpg" class="center-block img-responsive"></a>
                         <p class="legenda-imagem">
-                          Designer no processo de criação de ambiente<br>
+                          <i>Designer</i> no processo de criação de ambiente<br>
                           Fonte: Freepik (2023)
                         </p>
                         <p>Na etapa da criação de ambientes alinhados ao conceito de economia circular, o <i>designer</i> de interiores pode realizar algumas escolhas que otimizem o aproveitamento de materiais e otimização dos espaços. É possível citar algumas dessas ações como o <i>upcycling</i> e o <i>repurposing</i>, que dizem respeito ao reaproveitamento de materiais e móveis descartados, transformando-os em novos itens para uso no ambiente. É o caso, por exemplo, de criar uma estante utilizando paletes de madeira ou transformar uma antiga porta em uma mesa de jantar. Ainda, o <i>designer</i> pode optar por materiais e revestimentos de baixo impacto ambiental, como tintas e vernizes não tóxicos, madeira certificada e pisos reciclados. Além disso, está ao alcance do <i>designer</i> utilizar mobiliário recondicionado ou de segunda mão, aplicando técnicas de restauro e revitalização para dar uma nova vida a essas peças. </p>
@@ -166,7 +166,7 @@
                         <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
                         <a href="imgs/figura_2.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_2.jpg" class="center-block img-responsive"></a>
                         <p class="legenda-imagem">
-                          Designer na etapa de produção de um ambiente<br>
+                          <i>Designer</i> na etapa de produção de um ambiente<br>
                           Fonte: Freepik (2023)
                         </p>
                         <p class="acessivel no-print">Na imagem há um ambiente de estar e uma profissional de design fazendo a decoração de uma prateleira, na qual posiciona um pequeno vaso de cerâmica com flores vermelhas.</p>
