ajustes do conhecimento 5

--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -201,7 +201,7 @@
                         Fonte: Freepik (2023)
                       </p>
                       <p>
-                        Esses são apenas alguns exemplos de como o retrofit no design de interiores pode ser aplicado para reutilizar e renovar espaços existentes, criando ambientes únicos que combinam elementos do passado com funcionalidades contemporâneas
+                        Esses são apenas alguns exemplos de como o retrofit no <i>design</i> de interiores pode ser aplicado para reutilizar e renovar espaços existentes, criando ambientes únicos que combinam elementos do passado com funcionalidades contemporâneas
                       </p>
                     </div>
 
@@ -221,7 +221,7 @@
 
                     <div class="modal-body">
                       <p>A customização em <i>design</i> de interiores refere-se ao processo de personalizar e adaptar espaços, móveis, elementos decorativos e outros elementos do ambiente de acordo com as preferências, necessidades e estilo de vida dos clientes ou usuários. Essa abordagem visa criar espaços únicos e exclusivos que reflitam a identidade e as preferências pessoais dos indivíduos que habitarão ou utilizarão o ambiente.</p>
-                      <p>A customização pode ocorrer em diferentes níveis dentro do design de interiores:</p>
+                      <p>A customização pode ocorrer em diferentes níveis dentro do <i>design</i> de interiores:</p>
 
                       <div class="no-print" aria-hidden="true">
                         <p>Clique ou toque para visualizar o conteúdo.</p>
@@ -333,11 +333,11 @@
                 Fonte: Freepik (2023)
               </p>
               <p>
-                Esses são apenas alguns exemplos de como o retrofit no design de interiores pode ser aplicado para reutilizar e renovar espaços existentes, criando ambientes únicos que combinam elementos do passado com funcionalidades contemporâneas
+                Esses são apenas alguns exemplos de como o retrofit no <i>design</i> de interiores pode ser aplicado para reutilizar e renovar espaços existentes, criando ambientes únicos que combinam elementos do passado com funcionalidades contemporâneas
               </p>
 
               <p>A customização em <i>design</i> de interiores refere-se ao processo de personalizar e adaptar espaços, móveis, elementos decorativos e outros elementos do ambiente de acordo com as preferências, necessidades e estilo de vida dos clientes ou usuários. Essa abordagem visa criar espaços únicos e exclusivos que reflitam a identidade e as preferências pessoais dos indivíduos que habitarão ou utilizarão o ambiente.</p>
-              <p>A customização pode ocorrer em diferentes níveis dentro do design de interiores:</p>
+              <p>A customização pode ocorrer em diferentes níveis dentro do <i>design</i> de interiores:</p>
               <h4>Móveis e acessórios personalizados</h4>
               <p>Envolve a criação de móveis sob medida ou a modificação de peças existentes para se adequar ao espaço e atender às preferências do cliente em relação a materiais, cores, formas e funcionalidades específicas.</p>
               <h4><i>Layout</i>  e disposição</h4>
@@ -355,7 +355,7 @@
             </div>
 
             <h3>Apresentação de certificações e selos de garantia sustentáveis no <i>design</i> de interiores</h3>
-            <p>De acordo com Franco Pereira e Del Gaudio (2021 <i>apud</i> O design no contexto..., 1999), desde 1999, a partir da Declaração Internacional de Produção Mais Limpa, a comunidade mundial reconhece que medidas para proteger o meio ambiente global devem incluir a adoção de melhores práticas de produção e consumo sustentáveis.</p>
+            <p>De acordo com Franco Pereira e Del Gaudio (2021 <i>apud</i> O <i>design</i> no contexto..., 1999), desde 1999, a partir da Declaração Internacional de Produção Mais Limpa, a comunidade mundial reconhece que medidas para proteger o meio ambiente global devem incluir a adoção de melhores práticas de produção e consumo sustentáveis.</p>
             <p>Franco Pereira e Del Gaudio (2021 <i>apud</i>  ABC of SCP..., 2010) afirmam que o conceito de produção e consumo sustentáveis (PCS), como representado na figura a seguir, é definido como o uso de serviços e produtos que respondam às necessidades básicas e tragam uma melhor qualidade de vida, minimizando o uso de recursos naturais e materiais tóxicos, bem como as emissões de resíduos e poluentes ao longo do ciclo de vida do produto ou serviço, de modo a não comprometer as necessidades das gerações futuras.</p>
 
             <img src="imgs/figura_5.png" class="center-block img-responsive hidden-sm hidden-xs" alt="A imagem traz como elemento central um círculo no qual está escrito “Produção e consumo sustentável”. No entorno desse círculo existem os termos: “Gerenciamento de recursos sólidos”, “Manejo sustentável de recursos”, “Design para sustentabilidade”, “Produção mais limpa e eficiência de recursos”, “Transporte sustentável”, “Rotulagem ambiental e certificação”, “Compras públicas sustentáveis”, “Mercados sustentáveis” e “Estilos de vida sustentáveis”.">
@@ -365,7 +365,7 @@
               Produção e consumo sustentáveis Fonte: Trindade <br>
               Fonte: Trindade (s. d.)
             </p>
-            <p>Mais recentemente, a Cúpula das Nações Unidas sobre o Desenvolvimento Sustentável, ocorrida em setembro de 2015 em Nova Iorque, definiu os 17 novos Objetivos de Desenvolvimento Sustentável (ODS) como parte da Agenda 2030 para o Desenvolvimento Sustentável (Franco Pereira; <i>Del Gaudio</i>, 2021, p. 18).</p>
+            <p>Mais recentemente, a Cúpula das Nações Unidas sobre o Desenvolvimento Sustentável, ocorrida em setembro de 2015 em Nova Iorque, definiu os 17 novos Objetivos de Desenvolvimento Sustentável (ODS) como parte da Agenda 2030 para o Desenvolvimento Sustentável (Franco Pereira; Del Gaudio, 2021, p. 18).</p>
             <img src="imgs/Figura_6.png" class="center-block img-responsive hidden-sm hidden-xs" alt="No alto da imagem há o título “Objetivos de desenvolvimento sustentável”. Abaixo existem cards com pictogramas indicando “Erradicação da pobreza”, “Fome zero”, “Boa saúde e bem-estar”, “Educação de qualidade”, “Igualdade de gênero”, “Água limpa e saneamento”, “Energia acessível e limpa”, “Emprego digno e crescimento econômico”, “Indústria, inovação e infraestrutura”, “Redução das desigualdades”, “Cidades e comunidades sustentáveis”, “Consumo e produção responsáveis”, “Combate às alterações climáticas”, “Vida debaixo d´agua”, “Vida sobre a terra”, “Paz, justiça e instituições fortes” e “Parcerias em prol das metas”.">
             <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
             <a href="imgs/Figura_6.png" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/Figura_6.png" class="center-block img-responsive"></a>
@@ -384,7 +384,8 @@
                 <p>III–  maior eficiência na utilização de recursos naturais como água e energia; </p>
                 <p>IV – maior geração de empregos, preferencialmente com mão de obra local; </p>
                 <p>V – maior vida útil e menor custo de manutenção do bem e da obra; </p>
-                <p>VI – uso de inovações que reduzam a pressão sobre recursos naturais; VII – origem sustentável dos recursos naturais utilizados nos bens, nos serviços e nas obras; e </p>
+                <p>VI – uso de inovações que reduzam a pressão sobre recursos naturais; </p>
+                <p>VII – origem sustentável dos recursos naturais utilizados nos bens, nos serviços e nas obras; e </p>
                 <p>VIII – utilização de produtos florestais madeireiros e não madeireiros originários de manejo florestal sustentável ou de reflorestamento. </p>
               </div>
             </div>
@@ -455,7 +456,7 @@
                 <button type="button" class="btn-popover btn-popover01" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>ABNT NBR ISO 14001:</strong> certificação baseada na norma internacional ISO 14001, que atesta que a empresa tem um Sistema de Gestão Ambiental (SGA) eficaz e comprometido com a redução de impactos ambientais." data-placement="top" data-original-title="ABNT NBR ISO 14001" aria-describedby="popover278400"></button>
                 <button type="button" class="btn-popover btn-popover02" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo FSC (Forest Stewardship Council):</strong> certificação internacionalmente reconhecida para produtos de origem florestal indicando que a matéria-prima utilizada foi extraída de maneira responsável, considerando critérios ambientais e sociais. 
                 Com relação à certificação florestal, o Brasil tem um programa específico para isso. O <strong>Programa Brasileiro de Certificação em Cadeia de Custódia (PBCC)</strong> é certificação voltada para produtos florestais, como papel, móveis e embalagens, que garante o uso sustentável de recursos florestais" data-placement="top" data-original-title="Selo FSC (Forest Stewardship Council)" aria-describedby="popover278400"></button>
-                <button type="button" class="btn-popover btn-popover03" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo ecológico ABNT</strong> selo brasileiro que atesta a qualidade ambiental de produtos, considerando seu ciclo de vida desde a extração de matéria-prima até o descarte final." data-placement="top" data-original-title="Selo ecológico ABNT" aria-describedby="popover278400"></button>
+                <button type="button" class="btn-popover btn-popover03" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo ecológico ABNT:</strong> selo brasileiro que atesta a qualidade ambiental de produtos, considerando seu ciclo de vida desde a extração de matéria-prima até o descarte final." data-placement="top" data-original-title="Selo ecológico ABNT" aria-describedby="popover278400"></button>
                 <button type="button" class="btn-popover btn-popover04" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo Procel (Programa Nacional de Conservação de Energia Elétrica):</strong> utilizado em produtos que têm alta eficiência energética, incentivando o consumo consciente de energia elétrica." data-placement="top" data-original-title="Selo Procel" aria-describedby="popover278400"></button>
                 <button type="button" class="btn-popover btn-popover05" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo Ibama:</strong> aplicado a produtos que têm origem sustentável e que atendem aos requisitos ambientais estabelecidos pelo Instituto Brasileiro do Meio Ambiente e dos Recursos Naturais Renováveis (Ibama)." data-placement="top" data-original-title="Selo Ibama" aria-describedby="popover278400"></button>
                 <button type="button" class="btn-popover btn-popover06" data-toggle="popover" data-trigger="focus" title="" data-html="true" data-content="<strong>Selo Orgânico Brasil:</strong> certificação para produtos agrícolas e alimentos orgânicos, garantindo que foram produzidos de forma sustentável, sem a utilização de agrotóxicos ou fertilizantes químicos." data-placement="top" data-original-title="Selo Orgânico Brasil" aria-describedby="popover278400"></button>
