ajustes do conhecimento 6

--- a/06_meio_ambiente/index.html
+++ b/06_meio_ambiente/index.html
@@ -90,6 +90,7 @@
                   <p>
                     Que tal embarcar em uma jornada por esses biomas fascinantes e descobrir as plantas que os tornam tão especiais? Confira no vídeo a seguir. 
                   </p>
+                  <h1>Espera para vídeo</h1>
                   <video></video>
               </div>
             </div>
