--- a/08_urban_jungle/index.html
+++ b/08_urban_jungle/index.html
@@ -521,13 +521,13 @@
             <p>Dentro do ambiente residencial, as plantas desempenham um papel muito além do mero aspecto decorativo; elas constituem seres vivos em processo contínuo de crescimento e, por essa razão, demandam cuidados específicos. Assim, para o sucesso no desenvolvimento de uma <i>urban jungle</i> é importante seguir alguns critérios, tais como:</p>
             <div class="div-infografico">
               <ul class="marcador-folha">
-                <li>Passo 1: avalie o espaço disponível e as condições ambientais</li>
-                <li>Passo 2: pesquise e selecione as plantas</li>
-                <li>Passo 3: prepare o ambiente</li>
-                <li>Passo 4: prepare o solo e os recipientes</li>
-                <li>Passo 5: plante as espécies vegetais</li>
-                <li>Passo 6: crie arranjos e composições</li>
-                <li>Passo 7: cuide das plantas e curta a <i>urban jungle</i></li>
+                <li>Passo 1: avalie o espaço disponível e as condições ambientais.</li>
+                <li>Passo 2: pesquise e selecione as plantas.</li>
+                <li>Passo 3: prepare o ambiente.</li>
+                <li>Passo 4: prepare o solo e os recipientes.</li>
+                <li>Passo 5: plante as espécies vegetais.</li>
+                <li>Passo 6: crie arranjos e composições.</li>
+                <li>Passo 7: cuide das plantas e curta a <i>urban jungle</i>.</li>
               </ul>
               <img src="imgs/plantas_infografico.png" class="">
             </div>
