--- a/09_especies_vegetais/index.html
+++ b/09_especies_vegetais/index.html
@@ -217,8 +217,8 @@
             <p class="destaque"><img src='imgs/destaque.png' class="no-print" aria-hidden="true"><b>Nome do gênero + epíteto específico = <i>Nome da espécie</i></b></p>
             <p>Já o nome de mercado é formado por uma palavra latinizada e outra não latinizada, da seguinte forma:</p>
             <p class="destaque"><img src='imgs/destaque.png' class="no-print" aria-hidden="true"><b>Nome do gênero + nome não latinizado = nome de mercado</b></p>
-            <p>Para auxiliar no desenvolvimento dos projetos de jardinismo, confira um guia de espécies vegetais que podem ser aplicadas em projetos de paisagismo de interiores.</p>
-            <a class="download no-print" href=""><span class="acessivel">Faça download do PDF</span></a>
+            <p>Para auxiliar você em projetos de jardinismo, confira agora um guia de espécies vegetais que podem ser aplicadas em projetos de paisagismo de interiores. Se preferir, clique no botão a seguir para salvar o guia em seu computador.</p>
+            <a class="download no-print" href="pdf/PDF_guia_especies_vegetais.pdf" target="_blank"><span class="acessivel">Faça download do PDF</span></a>
           </div>
         </div>
         <div class="bloco arboreas">
@@ -795,7 +795,7 @@
                     <img src="imgs/49camomila.jpg" class="center-block img-responsive">
                     <p class="acessivel no-print">Haste ereta, com folhas delgadas e pequenas flores brancas.</p>
                   </td>
-                  <td>Sálvia (<i>Matricaria recutita</i>)</td>
+                  <td>Camomila (<i>Matricaria recutita</i>)</td>
                   <td>Cultivar em solo fértil, drenável, enriquecido com matéria orgânica e irrigado a intervalos regulares. Aprecia o clima ameno e não tolera o calor excessivo.</td>
                   <td>Exótica (Ásia, Europa)</td>
                   <td>Sol pleno</td>
